fixed binning exercise

--- a/notes/quiz1/Day_01_Introduction_to_Tabular_Data.ipynb
+++ b/notes/quiz1/Day_01_Introduction_to_Tabular_Data.ipynb
@@ -2728,7 +2728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 98,
       "metadata": {
         "id": "fxdlB7FmsK4d"
       },
@@ -2803,7 +2803,7 @@
               "      <td>passenger</td>\n",
               "      <td>30-45</td>\n",
               "      <td>United States</td>\n",
-              "      <td>5-25</td>\n",
+              "      <td>5-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abbott, Mr. Eugene Joseph</th>\n",
@@ -2820,7 +2820,7 @@
               "      <td>passenger</td>\n",
               "      <td>&lt;18</td>\n",
               "      <td>United States</td>\n",
-              "      <td>5-25</td>\n",
+              "      <td>20-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abbott, Mr. Rossmore Edward</th>\n",
@@ -2837,7 +2837,7 @@
               "      <td>passenger</td>\n",
               "      <td>&lt;18</td>\n",
               "      <td>United States</td>\n",
-              "      <td>5-25</td>\n",
+              "      <td>20-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abbott, Mrs. Rhoda Mary 'Rosa'</th>\n",
@@ -2854,7 +2854,7 @@
               "      <td>passenger</td>\n",
               "      <td>30-45</td>\n",
               "      <td>England</td>\n",
-              "      <td>5-25</td>\n",
+              "      <td>20-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abelseth, Miss. Karen Marie</th>\n",
@@ -2871,7 +2871,7 @@
               "      <td>passenger</td>\n",
               "      <td>&lt;18</td>\n",
               "      <td>Other</td>\n",
-              "      <td>5-25</td>\n",
+              "      <td>5-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -3025,11 +3025,11 @@
               "\n",
               "                               age_categories    country_cat fare_cat  \n",
               "name                                                                   \n",
-              "Abbing, Mr. Anthony                     30-45  United States     5-25  \n",
-              "Abbott, Mr. Eugene Joseph                 <18  United States     5-25  \n",
-              "Abbott, Mr. Rossmore Edward               <18  United States     5-25  \n",
-              "Abbott, Mrs. Rhoda Mary 'Rosa'          30-45        England     5-25  \n",
-              "Abelseth, Miss. Karen Marie               <18          Other     5-25  \n",
+              "Abbing, Mr. Anthony                     30-45  United States     5-10  \n",
+              "Abbott, Mr. Eugene Joseph                 <18  United States    20-25  \n",
+              "Abbott, Mr. Rossmore Edward               <18  United States    20-25  \n",
+              "Abbott, Mrs. Rhoda Mary 'Rosa'          30-45        England    20-25  \n",
+              "Abelseth, Miss. Karen Marie               <18          Other     5-10  \n",
               "...                                       ...            ...      ...  \n",
               "Wynn, Mr. Walter                        30-45        England      NaN  \n",
               "Yearsley, Mr. Harry                     30-45        England      NaN  \n",
@@ -3040,7 +3040,7 @@
               "[2207 rows x 14 columns]"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 98,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3048,8 +3048,8 @@
       "source": [
         "# YOUR CODE HERE\n",
         "df_titanic[\"fare_cat\"] = pd.cut(x = df_titanic[\"fare\"],\n",
-        "                                        bins = [0, 5, 25, 100, 100000],\n",
-        "                                        labels = [\"<5\", \"5-25\", \"25-100\", \"100+\"])\n",
+        "                                        bins = [0, 5, 10, 15, 20, 25, 50, 75, 100, 1000],\n",
+        "                                        labels = [\"<5\", \"5-10\", \"10-15\", \"15-20\", \"20-25\", \"25-50\", \"50-75\", \"75-100\", \"100+\"])\n",
         "df_titanic"
       ]
     },
