--- a/notes/quiz1/Day_01_Introduction_to_Tabular_Data.ipynb
+++ b/notes/quiz1/Day_01_Introduction_to_Tabular_Data.ipynb
@@ -3474,7 +3474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 106,
       "metadata": {
         "id": "yusWrx1icSJY"
       },
@@ -3677,7 +3677,7 @@
               "      <td>-   -</td>\n",
               "      <td>2020-05-28</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>0-9</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -3723,12 +3723,12 @@
               "25362              NaN  50-59         0  \n",
               "25363              NaN  30-39         0  \n",
               "25364              NaN  10-19         0  \n",
-              "25365              NaN    NaN         0  \n",
+              "25365              NaN    0-9         0  \n",
               "\n",
               "[25366 rows x 12 columns]"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 106,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3736,7 +3736,7 @@
       "source": [
         "# YOUR CODE HERE\n",
         "df_columbia['age'] = pd.cut(x = df_columbia[\"Edad\"],\n",
-        "                                      bins = [0, 9, 19, 29, 39, 49, 59, 69, 79, 130],\n",
+        "                                      bins = [-1, 9, 19, 29, 39, 49, 59, 69, 79, 130],\n",
         "                                      labels = [\"0-9\", \"10-19\", \"20-29\", \"30-39\", \"40-49\", \"50-59\", \"60-69\", \"70-79\", \"80+\"])\n",
         "# pd.set_option('display.max_rows', df_columbia.shape[0]+1)\n",
         "pd.set_option('display.max_rows', 10)\n",
@@ -3751,6 +3751,13 @@
         "\n",
         "df_columbia"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
