--- a/notes/quiz1/Day_01_Introduction_to_Tabular_Data.ipynb
+++ b/notes/quiz1/Day_01_Introduction_to_Tabular_Data.ipynb
@@ -2402,7 +2402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 107,
       "metadata": {
         "id": "nyyuEA9DsKbE"
       },
@@ -2441,9 +2441,11 @@
               "      <th>type</th>\n",
               "      <th>age_categories</th>\n",
               "      <th>country_cat</th>\n",
+              "      <th>fare_cat</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>name</th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -2475,6 +2477,7 @@
               "      <td>passenger</td>\n",
               "      <td>30-45</td>\n",
               "      <td>United States</td>\n",
+              "      <td>5-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abbott, Mr. Eugene Joseph</th>\n",
@@ -2491,6 +2494,7 @@
               "      <td>passenger</td>\n",
               "      <td>&lt;18</td>\n",
               "      <td>United States</td>\n",
+              "      <td>20-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abbott, Mr. Rossmore Edward</th>\n",
@@ -2507,6 +2511,7 @@
               "      <td>passenger</td>\n",
               "      <td>&lt;18</td>\n",
               "      <td>United States</td>\n",
+              "      <td>20-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abbott, Mrs. Rhoda Mary 'Rosa'</th>\n",
@@ -2522,7 +2527,8 @@
               "      <td>NaN</td>\n",
               "      <td>passenger</td>\n",
               "      <td>30-45</td>\n",
-              "      <td>England</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>20-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Abelseth, Miss. Karen Marie</th>\n",
@@ -2539,9 +2545,11 @@
               "      <td>passenger</td>\n",
               "      <td>&lt;18</td>\n",
               "      <td>Other</td>\n",
+              "      <td>5-10</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -2570,7 +2578,8 @@
               "      <td>deck crew</td>\n",
               "      <td>crew</td>\n",
               "      <td>30-45</td>\n",
-              "      <td>England</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Yearsley, Mr. Harry</th>\n",
@@ -2586,7 +2595,8 @@
               "      <td>victualling crew</td>\n",
               "      <td>crew</td>\n",
               "      <td>30-45</td>\n",
-              "      <td>England</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Young, Mr. Francis James</th>\n",
@@ -2602,7 +2612,8 @@
               "      <td>engineering crew</td>\n",
               "      <td>crew</td>\n",
               "      <td>30-45</td>\n",
-              "      <td>England</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Zanetti, Sig. Minio</th>\n",
@@ -2618,7 +2629,8 @@
               "      <td>restaurant staff</td>\n",
               "      <td>crew</td>\n",
               "      <td>18-30</td>\n",
-              "      <td>England</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Zarracchi, Sig. L.</th>\n",
@@ -2634,11 +2646,12 @@
               "      <td>restaurant staff</td>\n",
               "      <td>crew</td>\n",
               "      <td>18-30</td>\n",
-              "      <td>England</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>2207 rows × 13 columns</p>\n",
+              "<p>2207 rows × 14 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -2684,24 +2697,24 @@
               "Zanetti, Sig. Minio               nan  restaurant staff       crew   \n",
               "Zarracchi, Sig. L.                nan  restaurant staff       crew   \n",
               "\n",
-              "                               age_categories    country_cat  \n",
-              "name                                                          \n",
-              "Abbing, Mr. Anthony                     30-45  United States  \n",
-              "Abbott, Mr. Eugene Joseph                 <18  United States  \n",
-              "Abbott, Mr. Rossmore Edward               <18  United States  \n",
-              "Abbott, Mrs. Rhoda Mary 'Rosa'          30-45        England  \n",
-              "Abelseth, Miss. Karen Marie               <18          Other  \n",
-              "...                                       ...            ...  \n",
-              "Wynn, Mr. Walter                        30-45        England  \n",
-              "Yearsley, Mr. Harry                     30-45        England  \n",
-              "Young, Mr. Francis James                30-45        England  \n",
-              "Zanetti, Sig. Minio                     18-30        England  \n",
-              "Zarracchi, Sig. L.                      18-30        England  \n",
+              "                               age_categories     country_cat fare_cat  \n",
+              "name                                                                    \n",
+              "Abbing, Mr. Anthony                     30-45   United States     5-10  \n",
+              "Abbott, Mr. Eugene Joseph                 <18   United States    20-25  \n",
+              "Abbott, Mr. Rossmore Edward               <18   United States    20-25  \n",
+              "Abbott, Mrs. Rhoda Mary 'Rosa'          30-45  United Kingdom    20-25  \n",
+              "Abelseth, Miss. Karen Marie               <18           Other     5-10  \n",
+              "...                                       ...             ...      ...  \n",
+              "Wynn, Mr. Walter                        30-45  United Kingdom      NaN  \n",
+              "Yearsley, Mr. Harry                     30-45  United Kingdom      NaN  \n",
+              "Young, Mr. Francis James                30-45  United Kingdom      NaN  \n",
+              "Zanetti, Sig. Minio                     18-30  United Kingdom      NaN  \n",
+              "Zarracchi, Sig. L.                      18-30  United Kingdom      NaN  \n",
               "\n",
-              "[2207 rows x 13 columns]"
+              "[2207 rows x 14 columns]"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2710,7 +2723,10 @@
         "# YOUR CODE HERE\n",
         "def country_map(country):\n",
         "  if country in [\"United States\", \"England\", \"Scotland\", \"Wales\", \"Ireland\"]:\n",
-        "    return country\n",
+        "    if country == \"United States\":\n",
+        "        return \"United States\"\n",
+        "    else:\n",
+        "        return \"United Kingdom\"\n",
         "  else:\n",
         "    return \"Other\"\n",
         "df_titanic['country_cat'] = df_titanic['country'].map(country_map)\n",
