--- a/notes/quiz9/Day_09_XML,_HTML,_and_Web_Scraping.ipynb
+++ b/notes/quiz9/Day_09_XML,_HTML,_and_Web_Scraping.ipynb
@@ -9647,7 +9647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 42,
       "metadata": {
         "id": "EW2sWIGavIFc"
       },
@@ -9657,9 +9657,9 @@
         "\n",
         "for course in table:\n",
         "    course_name_tag = course.find(\"p\", attrs={\"class\": \"courseblocktitle\"})\n",
-        "    course_name = course_name_tag.text\n",
+        "    course_name = course_name_tag.get_text(strip=True)\n",
         "    term_name_tag = course.find(\"p\", attrs={\"class\": \"noindent\"})\n",
-        "    term_name = term_name_tag.text\n",
+        "    term_name = term_name_tag.get_text(strip=True)\n",
         "    courses.append({\n",
         "        \"course_name\": course_name,\n",
         "        \"term_name\": term_name\n",
@@ -9670,7 +9670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -9701,17 +9701,17 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>DATA 100. Data Science for All I.\\n4 units\\n</td>\n",
+              "      <td>DATA 100. Data Science for All I.4 units</td>\n",
               "      <td>Term Typically Offered: F, W, SP</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>DATA 301. Introduction to Data Science.\\n4 uni...</td>\n",
+              "      <td>DATA 301. Introduction to Data Science.4 units</td>\n",
               "      <td>Term Typically Offered: F, W, SP</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>DATA 401. Data Science Process and Ethics.\\n3 ...</td>\n",
+              "      <td>DATA 401. Data Science Process and Ethics.3 units</td>\n",
               "      <td>Term Typically Offered: F</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -9721,7 +9721,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>DATA 403. Data Science Projects Laboratory.\\n1...</td>\n",
+              "      <td>DATA 403. Data Science Projects Laboratory.1 unit</td>\n",
               "      <td>Term Typically Offered: F</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -9731,27 +9731,27 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>69</th>\n",
-              "      <td>STAT 551. Statistical Learning with R.\\n4 units\\n</td>\n",
+              "      <td>STAT 551. Statistical Learning with R.4 units</td>\n",
               "      <td>Term Typically Offered: F</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>70</th>\n",
-              "      <td>STAT 566. Graduate Consulting Practicum.\\n2 un...</td>\n",
+              "      <td>STAT 566. Graduate Consulting Practicum.2 units</td>\n",
               "      <td>Term Typically Offered: SP</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>71</th>\n",
-              "      <td>STAT 570. Selected Advanced Topics.\\n1-4 units\\n</td>\n",
+              "      <td>STAT 570. Selected Advanced Topics.1-4 units</td>\n",
               "      <td>Term Typically Offered: TBD</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>72</th>\n",
-              "      <td>STAT 590. Graduate Seminar in Statistics.\\n1 u...</td>\n",
+              "      <td>STAT 590. Graduate Seminar in Statistics.1 unit</td>\n",
               "      <td>Term Typically Offered: F, W, SP</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>73</th>\n",
-              "      <td>STAT 599. Thesis.\\n1-4 units\\n</td>\n",
+              "      <td>STAT 599. Thesis.1-4 units</td>\n",
               "      <td>Term Typically Offered: TBD</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -9761,17 +9761,17 @@
             ],
             "text/plain": [
               "                                          course_name   \n",
-              "0        DATA 100. Data Science for All I.\\n4 units\\n  \\\n",
-              "1   DATA 301. Introduction to Data Science.\\n4 uni...   \n",
-              "2   DATA 401. Data Science Process and Ethics.\\n3 ...   \n",
+              "0            DATA 100. Data Science for All I.4 units  \\\n",
+              "1      DATA 301. Introduction to Data Science.4 units   \n",
+              "2   DATA 401. Data Science Process and Ethics.3 units   \n",
               "3   DATA 402. Mathematical Foundations of Data Sci...   \n",
-              "4   DATA 403. Data Science Projects Laboratory.\\n1...   \n",
+              "4   DATA 403. Data Science Projects Laboratory.1 unit   \n",
               "..                                                ...   \n",
-              "69  STAT 551. Statistical Learning with R.\\n4 units\\n   \n",
-              "70  STAT 566. Graduate Consulting Practicum.\\n2 un...   \n",
-              "71   STAT 570. Selected Advanced Topics.\\n1-4 units\\n   \n",
-              "72  STAT 590. Graduate Seminar in Statistics.\\n1 u...   \n",
-              "73                     STAT 599. Thesis.\\n1-4 units\\n   \n",
+              "69      STAT 551. Statistical Learning with R.4 units   \n",
+              "70    STAT 566. Graduate Consulting Practicum.2 units   \n",
+              "71       STAT 570. Selected Advanced Topics.1-4 units   \n",
+              "72    STAT 590. Graduate Seminar in Statistics.1 unit   \n",
+              "73                         STAT 599. Thesis.1-4 units   \n",
               "\n",
               "                           term_name  \n",
               "0   Term Typically Offered: F, W, SP  \n",
@@ -9789,7 +9789,7 @@
               "[74 rows x 2 columns]"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
