working on lecture 10 work

--- a/notes/quiz10/The_Vector_Space_Model.ipynb
+++ b/notes/quiz10/The_Vector_Space_Model.ipynb
@@ -57,7 +57,26 @@
       "metadata": {
         "id": "Q7Vy5COKb74s"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "green_eggs_and_ham                I am Sam\\n\\nI am Sam\\nSam I am\\n\\nThat Sam-I-a...\n",
+              "cat_in_the_hat                    The sun did not shine.\\nIt was too wet to play...\n",
+              "fox_in_socks                      Fox\\nSocks\\nBox\\nKnox\\n\\nKnox in box.\\nFox in ...\n",
+              "hop_on_pop                        UP PUP Pup is up.\\nCUP PUP Pup in cup.\\nPUP CU...\n",
+              "horton_hears_a_who                On the fifteenth of May, in the jungle of Nool...\n",
+              "how_the_grinch_stole_christmas    Every Who\\nDown in Whoville\\nLiked Christmas a...\n",
+              "oh_the_places_youll_go            Congratulations!\\nToday is your day.\\nYou're o...\n",
+              "one_fish_two_fish                 One fish, two fish, red fish, blue fish,\\nBlac...\n",
+              "dtype: object"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import requests\n",
@@ -72,7 +91,9 @@
         "docs_seuss = pd.Series()\n",
         "for file in seuss_files:\n",
         "    response = requests.get(seuss_dir + file, \"r\")\n",
-        "    docs_seuss[file[:-4]] = response.text"
+        "    docs_seuss[file[:-4]] = response.text\n",
+        "\n",
+        "docs_seuss"
       ]
     },
     {
