--- a/assignments/assignment3/DATA_301_Assignment_3_Ishaan_Sathaye_and_Sreshta_Talluri.ipynb
+++ b/assignments/assignment3/DATA_301_Assignment_3_Ishaan_Sathaye_and_Sreshta_Talluri.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "vOIKn1LViity"
       },
@@ -166,8 +166,8 @@
               "</div>"
             ],
             "text/plain": [
-              "     county buchanan2000 gore2000 bush2000 nader2000 browne2000 total2000   \n",
-              "0   ALACHUA          262   47,300   34,062     3,215        658    85,235  \\\n",
+              "     county buchanan2000 gore2000 bush2000 nader2000 browne2000 total2000  \\\n",
+              "0   ALACHUA          262   47,300   34,062     3,215        658    85,235   \n",
               "1     BAKER           73    2,392    5,610        53         17     8,072   \n",
               "2       BAY          248   18,850   38,637       828        171    58,486   \n",
               "3  BRADFORD           65    3,072    5,413        84         28     8,597   \n",
@@ -181,7 +181,7 @@
               "4    80,416  87,980  25,249       7,927         148   283,680  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -4526,7 +4526,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.9.18"
     }
   },
   "nbformat": 4,
