--- a/assignments/assignment3/DATA_301_Assignment_3_Ishaan_Sathaye_and_Sreshta_Talluri.ipynb
+++ b/assignments/assignment3/DATA_301_Assignment_3_Ishaan_Sathaye_and_Sreshta_Talluri.ipynb
@@ -6174,13 +6174,163 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 49,
       "metadata": {
         "id": "KjpGo6dYjFYG"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Condition</th>\n",
+              "      <th>Prediction_Error</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Concept</td>\n",
+              "      <td>0.275385</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Retrieval</td>\n",
+              "      <td>0.191765</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Condition  Prediction_Error\n",
+              "0    Concept          0.275385\n",
+              "1  Retrieval          0.191765"
+            ]
+          },
+          "execution_count": 49,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# ENTER YOUR CODE HERE. ADD AS MANY CELLS AS YOU WANT."
+        "# ENTER YOUR CODE HERE. ADD AS MANY CELLS AS YOU WANT.\n",
+        "df_learning['Prediction_Error'] = abs(df_learning['TS.avg'] - df_learning['PR.2'])\n",
+        "prediction_accuracy = df_learning.groupby('Condition')['Prediction_Error'].mean().reset_index()\n",
+        "\n",
+        "prediction_accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  #altair-viz-f2cc19cba0bc4bfaa8dc8eb0c20daeea.vega-embed {\n",
+              "    width: 100%;\n",
+              "    display: flex;\n",
+              "  }\n",
+              "\n",
+              "  #altair-viz-f2cc19cba0bc4bfaa8dc8eb0c20daeea.vega-embed details,\n",
+              "  #altair-viz-f2cc19cba0bc4bfaa8dc8eb0c20daeea.vega-embed details summary {\n",
+              "    position: relative;\n",
+              "  }\n",
+              "</style>\n",
+              "<div id=\"altair-viz-f2cc19cba0bc4bfaa8dc8eb0c20daeea\"></div>\n",
+              "<script type=\"text/javascript\">\n",
+              "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+              "  (function(spec, embedOpt){\n",
+              "    let outputDiv = document.currentScript.previousElementSibling;\n",
+              "    if (outputDiv.id !== \"altair-viz-f2cc19cba0bc4bfaa8dc8eb0c20daeea\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-f2cc19cba0bc4bfaa8dc8eb0c20daeea\");\n",
+              "    }\n",
+              "    const paths = {\n",
+              "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
+              "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
+              "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@5.15.1?noext\",\n",
+              "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm/vega-embed@6?noext\",\n",
+              "    };\n",
+              "\n",
+              "    function maybeLoadScript(lib, version) {\n",
+              "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+              "      return (VEGA_DEBUG[key] == version) ?\n",
+              "        Promise.resolve(paths[lib]) :\n",
+              "        new Promise(function(resolve, reject) {\n",
+              "          var s = document.createElement('script');\n",
+              "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+              "          s.async = true;\n",
+              "          s.onload = () => {\n",
+              "            VEGA_DEBUG[key] = version;\n",
+              "            return resolve(paths[lib]);\n",
+              "          };\n",
+              "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+              "          s.src = paths[lib];\n",
+              "        });\n",
+              "    }\n",
+              "\n",
+              "    function showError(err) {\n",
+              "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+              "      throw err;\n",
+              "    }\n",
+              "\n",
+              "    function displayChart(vegaEmbed) {\n",
+              "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+              "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+              "    }\n",
+              "\n",
+              "    if(typeof define === \"function\" && define.amd) {\n",
+              "      requirejs.config({paths});\n",
+              "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+              "    } else {\n",
+              "      maybeLoadScript(\"vega\", \"5\")\n",
+              "        .then(() => maybeLoadScript(\"vega-lite\", \"5.15.1\"))\n",
+              "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+              "        .catch(showError)\n",
+              "        .then(() => displayChart(vegaEmbed));\n",
+              "    }\n",
+              "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-2e2ef721b21ddbe67e0b7eeefbfc918a\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"x\": {\"field\": \"Condition\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Prediction_Error\", \"type\": \"quantitative\"}}, \"title\": \"Prediction Accuracy by Condition\", \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-2e2ef721b21ddbe67e0b7eeefbfc918a\": [{\"Condition\": \"Concept\", \"Prediction_Error\": 0.2753846153846154}, {\"Condition\": \"Retrieval\", \"Prediction_Error\": 0.19176470588235295}]}}, {\"mode\": \"vega-lite\"});\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "alt.Chart(...)"
+            ]
+          },
+          "execution_count": 53,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import altair as alt\n",
+        "\n",
+        "alt.Chart(prediction_accuracy).mark_bar().encode(\n",
+        "    x='Condition',\n",
+        "    y='Prediction_Error'\n",
+        ").properties(\n",
+        "    title='Prediction Accuracy by Condition'\n",
+        ")"
       ]
     },
     {
@@ -6189,7 +6339,9 @@
         "id": "OTeCGq7RjFj0"
       },
       "source": [
-        "**YOUR RESPONSE HERE**"
+        "**YOUR RESPONSE HERE**\n",
+        "\n",
+        "From the above chart, the group with the retrieval practice had a lower prediction error compared to the concept group. Essentially, those who practiced retrieval were better at predicting their performance on the follow-up test than those who utilized concept maps."
       ]
     },
     {
